<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/bottom_nav_meet"
        android:icon="@drawable/ic_meet"
        android:title="@string/meet"></item>
    <item
        android:id="@+id/bottom_nav_match"
        android:icon="@drawable/ic_match"
        android:title="@string/match"></item>
    <item
        android:id="@+id/bottom_nav_chat"
        android:icon="@drawable/ic_chat"
        android:title="@string/chat"></item>
    <item
        android:id="@+id/bottom_nav_social"
        android:icon="@drawable/ic_social"
        android:title="@string/social"></item>
    <item
        android:id="@+id/bottom_nav_notify"
        android:icon="@drawable/ic_notify"
        android:title="Notification"></item>
</menu>