<?xml version="1.0" encoding="utf-8"?>
<androidx.swiperefreshlayout.widget.SwipeRefreshLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/swipe_refresh_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_below="@+id/audience"
    android:background="@color/white"
    android:clickable="true"
    android:focusable="true"
    tools:context=".Activities.SplashActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white">

        <include
            android:id="@+id/header"
            layout="@layout/app_header_for_fragments"/>

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/header">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="180dp"
                    android:orientation="vertical"
                    android:padding="20dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/lato_bold"
                        android:text="@string/your_likes"
                        android:textColor="@color/black"
                        android:textSize="18sp"/>

                    <TextView
                        android:id="@+id/tv_upgrade_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:fontFamily="@font/lato_regular"
                        android:text="@string/upgrade_to_see_who_liked_you"
                        android:textColor="@color/colorPrimaryDark"
                        android:textSize="12sp"/>

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:gravity="center_vertical"
                        android:orientation="horizontal">



                        <RelativeLayout
                            android:id="@+id/rl_other_likes"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerVertical="true"
                            android:layout_marginStart="-20dp"
                            android:layout_toRightOf="@+id/img_blur_users"
                            android:background="@drawable/red_round_medium"
                            android:visibility="gone">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_centerVertical="true"
                                android:layout_marginStart="17dp"
                                android:fontFamily="@font/lato_bold"
                                android:gravity="center"
                                android:text="@string/_6"
                                android:textColor="@color/white"
                                android:textSize="14sp">

                            </TextView>
                        </RelativeLayout>

                        <androidx.recyclerview.widget.RecyclerView
                            android:id="@+id/rv_likes"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="20dp"
                            android:layout_toLeftOf="@+id/tv_total_likes"
                            android:orientation="horizontal"
                            android:visibility="gone"
                            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                            tools:itemCount="6"
                            tools:listitem="@layout/item_user_image"/>

                        <ImageView
                            android:id="@+id/img_blur_users"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@drawable/blur_users"
                            android:visibility="visible"
                            android:contentDescription="@string/todo" />

                        <TextView
                            android:id="@+id/tv_total_likes"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentEnd="true"
                            android:layout_centerVertical="true"
                            android:fontFamily="@font/lato_bold"
                            android:text="@string/_0_likes"
                            android:textColor="@color/black"
                            android:textSize="18sp"
                            android:visibility="gone"
                            tools:ignore="RelativeOverlap" />
                    </RelativeLayout>

                </LinearLayout>

                <View
                    android:id="@+id/view1"
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:alpha="0.3"
                    android:background="@color/light_grey">

                </View>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/lato_bold"
                        android:text="@string/your_matches"
                        android:textColor="@color/black"
                        android:textSize="18sp"
                        android:layout_marginHorizontal="20dp"
                        android:layout_marginTop="20dp"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/lato_regular"
                        android:text="@string/you_have_24_hours_to_start_conversations_with_a_match_or_it_is_removed"
                        android:textColor="@color/black"
                        android:textSize="12sp"
                        android:layout_marginHorizontal="20dp"
                        android:layout_marginTop="10dp"/>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:layout_marginHorizontal="10dp">

                        <androidx.recyclerview.widget.RecyclerView
                            android:id="@+id/rv_your_matches"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_marginTop="20dp"
                            android:visibility="visible"
                            app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
                            app:spanCount="2"
                            tools:itemCount="3"
                            tools:listitem="@layout/item_your_matches">

                        </androidx.recyclerview.widget.RecyclerView>

                        <TextView
                            android:id="@+id/tv_no"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:gravity="center"
                            android:text="@string/no_match_found"
                            android:textColor="@color/black"
                            android:textSize="16sp"
                            android:textStyle="bold"
                            android:visibility="gone" />
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>
        </androidx.core.widget.NestedScrollView>

    </RelativeLayout>

</androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
